                                                        -*- coding: utf-8 -*-
Changes with Apache 2.3.0
[ When backported to 2.2.x, remove entry from this file ]

  *) ab: Use a 64 bit unsigned int instead of a signed long to count the
     bytes transferred to avoid integer overflows. PR 44346 [Ruediger Pluem]

  *) mod_proxy_ajp: Do not retry request in the case that we either failed to
     sent a part of the request body or if the request is not idempotent.
     PR 44334 [Ruediger Pluem]

  *) mod_proxy_http: Fix processing of chunked responses if
     Connection: Transfer-Encoding is set in the response of the proxied
     system. PR 44311 [Ruediger Pluem]

  *) ProxyPassReverse is now balancer aware. [Jim Jagielski]

  *) rotatelogs: Don't leak memory when reopening the logfile.
     PR 40183 [Ruediger Pluem, Takashi Sato <serai lans-tv.com>]

  *) mod_ldap: Add support (taking advantage of the new APR capability)
     for ldap rebind callback while chasing referrals. This allows direct
     searches on LDAP servers (in particular MS Active Directory 2003+)
     using referrals without the use of the global catalog.
     PRs 26538, 40268, and 42557 [Paul J. Reder]

  *) ab: Do not try to read non existing response bodies of HEAD requests.
     PR 34275 [Takashi Sato <serai lans-tv.com>]

  *) Support chroot on Unix-family platforms
     PR 43596 [Dimitar Pashev <mitko banksoft-bg.com>]

  *) Don't add bogus duplicate Content-Language entries
     PR 11035 [Davi Arnaut]

  *) mod_proxy_ftp: Fix base for directory listings.
     PR 27834 [Nick Kew]

  *) mod_proxy_http: Return HTTP status codes instead of apr_status_t
     values for errors encountered while forwarding the request body
     PR 44165 [Eric Covener]

  *) mod_logio: Provide optional function to allow modules to adjust the 
     bytes_in count [Eric Covener]

  *) mod_ssl: Added server name indication support (RFC 4366).
     PR 34607. [Kaspar Brand <asfbugz velox.ch>]
